# rules_prom

./: BUILD.bazel  WORKSPACE  defs.bzl
examples/: BUILD.bazel
templates/: many_restarts
